--- a/styles/sass/_mixins.scss
+++ b/styles/sass/_mixins.scss
@@ -25,7 +25,7 @@
 	content:"Bhagirthi";
 	color: $light-b-color;
 	font-weight: 900;
-	font-size: 8rem;
+	font-size: 7rem;
 	left:$left;
 	top:$top;
 	width:$width;
@@ -48,7 +48,7 @@
 	content:"Jhamb";
 	color: $light-b-color;
 	font-weight: 900;
-	font-size: 8rem;
+	font-size: 7rem;
 	left:$left;
 	top:$top;
 	width:$width;
